--- a/Rollin-Up_room.html
+++ b/Rollin-Up_room.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+3<!DOCTYPE html>
 <html>
 <head>
 	<title>Rollin-Up Chat Room</title>
@@ -8,6 +8,9 @@
 
 <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet"><meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -16,16 +19,19 @@
 <link rel="stylesheet" type="text/css" href="Rollin-Up.css">
 
 </head>
-<body>
+<body onload="displaytheename()">
 <div class="container">
 <button id="logout" onclick="logout()" class="glyphicon glyphicon-log-out btn btn-danger">Logout</button>
 	<center>
 		<h1 class="header">	
 			Rollin-Up	
 			<sup>
-				<img src="m2.png">
+				<img class="diamondanim" src="Diamond Tingy.png">
 			</sup>
 		</h1>
+		<div id="displaytheename" class="wasuup">
+			You shouldn't see this!
+		</div>
 		<h3 id="user_name" class="color_white"></h3>
 		<div class="form-group input_div_room_page">
 			<label>Add Room:</label>
