--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</sup>
 </h1>
 	<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
-    <img class="diamondanim" src="https://lh3.googleusercontent.com/proxy/7diujQOxxq2bndhafISSRvqfzQD-Ht40LuMVdFtPecYwcroFbUNkXfEH9SS18A2vPiRWF-C_--I7YqWE5Mj1azjb" class="logo">
+    <img class="diamondanim" src="Diamond Tingy.png" class="logo">
 		<h3 >Everyone is Rollin-up! &nbsp;<span><img style="height: 30px;" src="https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/DiagonalArrowDownLeft-512.png"></span> </h3>
 		<h4 >Join Rollin-up today</h4>
 		<div class="form-group">
@@ -32,7 +32,7 @@
 	</div>
 </center>
 <h2 id="footer">
-	Made By: zCranking
+	Made By: zCranking <img class="footer_image" src="Logo.png">
 </h2>
 <script src="Rollin-up.js"></script>
 </body>
